Atualização do about.html

--- a/about.html
+++ b/about.html
@@ -10,5 +10,7 @@
     <p>Testando</p>
     <p>Testando GitHub</p>
     <p>Testando comando push</p>
+    <p>Enviando funcionalidade</p>
+
 </body>
 </html>
