--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <p>Testando GitHub</p>
     <p>Testando comando push</p>
     <p>Enviando funcionalidade</p>
+    <p>Testando pull enviando para o repo 1</p>
 
 </body>
 </html>
